# mbmc

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
src/mbmc/: __main__.py  addrelease.py  cache.py  gui.py  match_releases.py  music_brainz.py  prefetch.py  progress.py  util.py  yt_music_api_types.py
src/mbmc/providers/: apple_music.py  bandcamp.py  deezer.py  discogs.py  metal_archives.py  music_brainz_provider.py  provider.py  question.py  spotify.py  tidal.py  vk_music.py  youtube_music.py
src/musicbrainz_submit/: __main__.py  addrelease.py  constants.py  gui.py  match_releases.py  music_brainz.py  prefetch.py  progress.py  util.py
src/musicbrainz_submit/providers/: _mb_link_types.py  apple_music.py  bandcamp.py  deezer.py  discogs.py  metal_archives.py  music_brainz_provider.py  provider.py  question.py  spotify.py  tidal.py  vk_music.py  youtube_music.py
